--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 ##########################
 # Unreal Generated Files #
 ##########################
-*/Build
-*/Binaries
-*/DerivedDataCache
-*/Intermediate
-*/Saved
-BuildingEscape/Content/StarterContent/
+Build
+Binaries
+DerivedDataCache
+Intermediate
+Saved
+Content/StarterContent/
 
 ######################
 # VS Generated Files #
